# emergency_notification_system

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.testing.yaml  config_vars.yaml  secure_data_example.json  static_config.yaml
postgresql/schemas/: db_1.sql  ens_schema.sql
src/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp  utils.hpp
src/groups/: groups.cpp  groups.hpp  handlers.cpp  handlers.hpp
src/notifications/: handlers.cpp  handlers.hpp  notifications.cpp  notifications.hpp
src/notifications/telegram/: telegram_bot.cpp  telegram_bot.hpp
src/recipients/: handlers.cpp  handlers.hpp  recipients.cpp  recipients.hpp
src/schemas/: schemas.cpp  schemas.hpp  schemas_fwd.hpp  schemas_parsers.ipp
src/templates/: handlers.cpp  handlers.hpp  templates.cpp  templates.hpp
src/user/: auth.cpp  auth.hpp  handlers.cpp  handlers.hpp  user.cpp  user.hpp
src/users/: auth.cpp  auth.hpp  handlers.cpp  handlers.hpp  users.cpp  users.hpp
src/utils/: utils.cpp  utils.hpp
swagger/: api_spec.yaml  responses.yaml  schemas.yaml
swagger/paths/groups/: groups-active.yaml  groups-addRecipient.yaml  groups-all.yaml  groups-confirmCreation-{draftId}.yaml  groups-confirmCreation-{draft_id}.yaml  groups-confirmCreation.yaml  groups-create.yaml  groups-deleteGroup-{groupId}.yaml  groups-deleteGroup-{group_id}.yaml  groups-deleteGroup.yaml  groups-deleteRecipient.yaml  groups-modifyGroup-{groupId}.yaml  groups-modifyGroup-{group_id}.yaml  groups-modifyGroup.yaml  groups-recipients-{groupId}.yaml  groups-recipients-{group_id}.yaml  groups-recipients.yaml  groups-{groupId}-recipients-{recipientId}.yaml  groups-{groupId}.yaml  groups-{group_id}-recipients-{recipient_id}.yaml  groups-{group_id}.yaml  groups.yaml
swagger/paths/notifications/: notifications-all.yaml  notifications-cancelNotification.yaml  notifications-completed.yaml  notifications-createBatch.yaml  notifications-pending.yaml  notifications-send.yaml  notifications-sendBatch.yaml  notifications-{notificationId}.yaml  notifications-{notification_id}.yaml  notifications.yaml
swagger/paths/recipients/: recipients-all.yaml  recipients-confirmCreation-{draftId}.yaml  recipients-confirmCreation-{draft_id}.yaml  recipients-confirmCreation.yaml  recipients-create.yaml  recipients-deleteRecipient-{recipientId}.yaml  recipients-deleteRecipient-{recipient_id}.yaml  recipients-deleteRecipient.yaml  recipients-modifyRecipient-{recipientId}.yaml  recipients-modifyRecipient-{recipient_id}.yaml  recipients-modifyRecipient.yaml  recipients-{recipientId}.yaml  recipients-{recipient_id}.yaml  recipients.yaml
swagger/paths/templates/: template.yaml  templates-all.yaml  templates-confirmCreation-{draftId}.yaml  templates-confirmCreation-{draft_id}.yaml  templates-confirmCreation.yaml  templates-create.yaml  templates-deleteTemplate-{templateId}.yaml  templates-deleteTemplate-{template_id}.yaml  templates-deleteTemplate.yaml  templates-modifyTemplate-{templateId}.yaml  templates-modifyTemplate-{template_id}.yaml  templates-modifyTemplate.yaml  templates-{templateId}.yaml  templates-{template_id}.yaml  templates.yaml
swagger/paths/user/: user-create.yaml  user-login.yaml  user-logout.yaml  user-modifyUser.yaml  user-refreshToken.yaml  user.yaml
tests/: conftest.py  schemas.py  test_groups.py  test_recipients.py  test_templates.py  test_users.py  utils.py
tests/postman/: ens.postman_collection.json
